--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="profile-man.png">
+    <link rel="icon" href="Bahan Portofolio/profile-man.png">
     <title>Anggoro - Portfolio</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
                     <a href="">Anggoro Jati Pratikto</a>
                 </li>
                 <li class="align-right">
-                    <a href="">Home</a>
-                    <a href="">Skill</a>
-                    <a href="">Contact</a>
+                    <a href="#home">Home</a>
+                    <a href="#sklil">Skill</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -69,6 +69,7 @@
                 <h2 class="text-center">Number Phone</h2>
                 <p class="text-center">085723619193</p>
             </div>
+            <iframe class="google-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.34299284531!2d106.70033814987026!3d-6.349617863864568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e598c7e615b9%3A0x63adc39be99da7de!2sSekolah%20Menengah%20Kejuruan%20Al%20Amanah!5e0!3m2!1sid!2sid!4v1664339454809!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </div>
     </section>
