--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="Bahan Portofolio/profile-man.png">
     <title>Anggoro - Portfolio</title>
 </head>
-<body>
+<body background="/Bahan Portofolio/1061566.png">
     <nav>
         <div class="container">
             <ul>
@@ -17,7 +17,7 @@
                 </li>
                 <li class="align-right">
                     <a href="#home">Home</a>
-                    <a href="#sklil">Skill</a>
+                    <a href="#skill">Skill</a>
                     <a href="#contact">Contact</a>
                 </li>
             </ul>
